[project]
name = "mdrepoatlas"
version = "0.1.2"
description = "LLM-optimized codebase snapshot generator"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{ name = "Abdulaziz Alhulail" }]
keywords = [
  "llm",
  "codebase",
  "repository",
  "markdown",
  "snapshot",
  "documentation",
  "cli",
  "developer-tools"
]
dynamic = ["dependencies"]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",

  "License :: OSI Approved :: MIT License",

  "Environment :: Console",

  "Operating System :: OS Independent",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Version Control",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/DavidoffichW/mdrepoatlas"
Repository = "https://github.com/DavidoffichW/mdrepoatlas"
Issues = "https://github.com/DavidoffichW/mdrepoatlas/issues"

[project.scripts]
mdrepoatlas = "c2md.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["c2md*"]